swagger config & add project & get hporesult형식업로드
