# swagger/swagger.yaml
@@ -1,27 +1,27 @@
 openapi: 3.0.0
 info:
-  version: '1.0.0'
-  title: 'Nutella API'
-  description: 'Nutella API'
-    
+  version: "1.0.0"
+  title: "Nutella API"
+  description: "Nutella API"
+
 tags:
-  - name: 'Project'
-    description: 'About projects'
+  - name: "Project"
+    description: "About projects"
     externalDocs:
-      url: 'http://localhost:7000'
-  - name: 'Run'
-    description: 'About runs'
+      url: "http://localhost:7000"
+  - name: "Run"
+    description: "About runs"
     externalDocs:
-      url: 'http://localhost:7000'
-  - name: 'Graph'
-    description: 'About graphs'
+      url: "http://localhost:7000"
+  - name: "Graph"
+    description: "About graphs"
     externalDocs:
-      url: 'http://localhost:7000'      
+      url: "http://localhost:7000"
 
 paths:
   /admin/project:
     post:
-      tags: 
+      tags:
         - "Project"
       summary: 프로젝트 생성 시 정보 받음
       requestBody:
@@ -29,150 +29,218 @@ paths:
         required: true
         content:
           application/json:
-            schema:       
-              $ref: '#/components/schema/Project1'                 
+            schema:
+              $ref: "#/components/schema/Project1"
       responses:
-        '200':
+        "200":
           description: Echo POST
     get:
-      tags: 
+      tags:
         - "Project"
       summary: my space에서 카드 6개씩 읽어올 때
       parameters:
-        - $ref: '#/components/parameters/page'
+        - $ref: "#/components/parameters/page"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schema/ProjectCard'
+                $ref: "#/components/schema/ProjectCard"
 
   /admin/project/{id}:
     get:
-      tags: 
+      tags:
         - "Project"
       summary: work space에서 프로젝트 정보 받아올 때, 기본 프로젝트 한 개 정보
       parameters:
-        - $ref: '#/components/parameters/pjId'
+        - $ref: "#/components/parameters/pjId"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schema/Project2'
+                $ref: "#/components/schema/Project2"
     delete:
-      tags: 
+      tags:
         - "Project"
       summary: 프로젝트 삭제
       parameters:
-        - $ref: '#/components/parameters/pjId'
+        - $ref: "#/components/parameters/pjId"
       responses:
-        '200':
+        "200":
           description: OK
     put:
-      tags: 
-        - "Project" 
+      tags:
+        - "Project"
       summary: 프로젝트 정보 업데이트
       requestBody:
         description: \{\"params\" \:\} 안에 보내기
         required: true
         content:
           application/json:
-            schema:       
-              $ref: '#/components/schema/Project1'
+            schema:
+              $ref: "#/components/schema/Project1"
       parameters:
-        - $ref: '#/components/parameters/pjId'
+        - $ref: "#/components/parameters/pjId"
       responses:
-        '200':
-          description: OK 
+        "200":
+          description: OK
 
   /admin/projects/list:
     get:
-      tags: 
+      tags:
         - "Project"
       summary: 모든 프로젝트 이름 리스트
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schema/Project3'                     
+                $ref: "#/components/schema/Project3"
 
   /admin/run:
     get:
-      tags: 
+      tags:
         - "Run"
       summary: mypage에서 run 10개씩 읽어올 때
       parameters:
-        - $ref: '#/components/parameters/page'               
+        - $ref: "#/components/parameters/page"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schema/RunCard'                    
+                $ref: "#/components/schema/RunCard"
 
   /admin/run/{id}:
     get:
-      tags: 
+      tags:
         - "Run"
       summary: workspace에서 프로젝트 id에 따라 불러오기
       parameters:
-        - $ref: '#/components/parameters/pjId'
+        - $ref: "#/components/parameters/pjId"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                - $ref: '#/components/schema/Run1'
-                - $ref: '#/components/schema/Step1'
+                - $ref: "#/components/schema/Run1"
     delete:
-      tags: 
+      tags:
         - "Run"
       summary: run id로 run 삭제
       parameters:
-        - $ref: '#/components/parameters/rId'
+        - $ref: "#/components/parameters/rId"
       responses:
-        '200':
+        "200":
           description: OK
     put:
-      tags: 
-        - "Run" 
-      summary: run id로 run 이름 업데이트 
+      tags:
+        - "Run"
+      summary: run id로 run 이름 업데이트
       requestBody:
         description: \{\"params\" \:\} 안에 보내기
         required: true
         content:
           application/json:
-            schema:       
-              $ref: '#/components/schema/Run2'
+            schema:
+              $ref: "#/components/schema/Run2"
       parameters:
-        - $ref: '#/components/parameters/rId'        
- 
+        - $ref: "#/components/parameters/rId"
+
       responses:
-        '200':
+        "200":
           description: OK
 
-  /admin/graph/:id:
+  /admin/graph/{id}:
     get:
-      tags: 
+      tags:
         - "Graph"
       summary: 그래프 그리기
       parameters:
-        - $ref: '#/components/parameters/rId'
-        - $ref: '#/components/parameters/index'        
+        - $ref: "#/components/parameters/rId"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                - $ref: '#/components/schema/Step2'
+                $ref: "#/components/schema/Step2"
+  /admin/hpo/key:
+    get:
+      tags:
+        - "HPO"
+      summary: hpo api key받기
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schema/HpoKey"
+  /admin/hpo/config/{id}:
+    get:
+      tags:
+        - "HPO"
+      summary: hpo config 정보 받기
+      parameters:
+        - $ref: "#/components/parameters/pjId"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schema/HpoConfigGet"
+  /admin/hpo/config:
+    post:
+      tags:
+        - "HPO"
+      summary: hpo config 생성
+      requestBody:
+        description: config 데이터 전송.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schema/HpoConfigPost"
+      responses:
+        "200":
+          description: 전송 성공
+  /admin/hpo/project:
+    post:
+      tags:
+        - "HPO"
+      summary: hpo project 생성
+      requestBody:
+        description: hpo project 전송 바디.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schema/HpoProjectPost"
+      responses:
+        "200":
+          description: 전송 성공
+  /admin/hpo/result/{id}:
+    get:
+      tags:
+        - "HPO"
+      summary: hpo 결과값 정보 받기
+      parameters:
+        - $ref: "#/components/parameters/pjId"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schema/HpoRun"
 
 components:
   schema:
@@ -180,7 +248,7 @@ components:
       type: "object"
       properties:
         projectName:
-          type: "string"        
+          type: "string"
         description:
           type: "string"
         privacy:
@@ -194,7 +262,7 @@ components:
         projectName:
           type: "string"
         totalRuns:
-          type: "integer" 
+          type: "integer"
 
     Project3:
       type: "object"
@@ -202,8 +270,8 @@ components:
         projectId:
           type: "integer"
         projectName:
-          type: "string"               
-        
+          type: "string"
+
     ProjectCard:
       type: "object"
       properties:
@@ -219,30 +287,30 @@ components:
           type: "integer"
         created_at:
           type: "string"
-        
+
     Run1:
       type: "object"
       properties:
         runId:
           type: "integer"
         projectId:
-          type: "integer"                  
+          type: "integer"
         runName:
           type: "string"
         state:
           type: "string"
         runTime:
-          type: "string"                    
+          type: "string"
         createdBy:
           type: "string"
         created_at:
-          type: "string"            
+          type: "string"
 
     Run2:
       type: "object"
       properties:
         runId:
-          type: "integer"        
+          type: "integer"
         runName:
           type: "string"
 
@@ -256,62 +324,95 @@ components:
         projectName:
           type: "string"
         state:
-          type: "string"          
+          type: "string"
         updated_at:
-          type: "string"  
-          
+          type: "string"
+
     Step1:
       type: "object"
       properties:
         stepId:
           type: "integer"
         stepNumber:
-          type: "integer"          
+          type: "integer"
         reinit:
           type: "boolean"
         accuracy:
-          type: "number"  
+          type: "number"
         loss:
-          type: "number" 
+          type: "number"
         precision:
-          type: "number"  
+          type: "number"
         recall:
-          type: "number"  
+          type: "number"
         cpu:
-          type: "number"  
+          type: "number"
         gpu:
-          type: "number" 
+          type: "number"
         net:
-          type: "number"  
+          type: "number"
         disk:
-          type: "number"   
+          type: "number"
 
     Step2:
+      type: "array"
+      items:
+        type: "object"
+        properties:
+          stepNumber:
+            type: "integer"
+          indicator:
+            type: "object"
+    HpoKey:
+      type: "string"
+    HpoProjects:
       type: "object"
       properties:
-        stepId:
+        projectName:
+          type: "string"
+        createBy:
+          type: "string"
+        state:
+          type: "string"
+    HpoConfigGet:
+      type: "object"
+      properties:
+        method:
           type: "integer"
-        runName:
-          type: "string"          
-        stepNumber:
-          type: "integer"          
-        accuracy:
-          type: "number"  
-        loss:
-          type: "number" 
-        precision:
-          type: "number"  
-        recall:
-          type: "number"  
-        cpu:
-          type: "number"  
-        gpu:
-          type: "number" 
-        net:
-          type: "number"  
-        disk:
-          type: "number"            
-          
+        config:
+          type: "object"
+    HpoConfigPost:
+      type: "object"
+      properties:
+        projectName:
+          type: "string"
+        method:
+          type: "integer"
+        config:
+          type: "object"
+    HpoProjectPost:
+      type: "object"
+      properties:
+        hpoName:
+          type: "string"
+        description:
+          type: "string"
+        apiKey:
+          type: "string"
+        createBy:
+          type: "string"
+    HpoRun:
+      type: "array"
+      items:
+        type: "object"
+        properties:
+          target:
+            type: "object"
+          config:
+            type: "object"
+          runName:
+            type: "string"
+
   parameters:
     # req.query.
     page:
@@ -321,25 +422,18 @@ components:
       description: 페이지 값
       schema:
         type: integer
-    index:
-      name: index
-      in: query
-      required: true
-      description: 그래프를 그리고 싶은 지표 이름
-      schema:
-        type: string        
-    # req.params.      
+    # req.params.
     pjId:
       name: id
       in: path
       requried: true
       description: 프로젝트 ID 값
       schema:
-        type: integer                  
+        type: integer
     rId:
       name: id
       in: path
       requried: true
       description: 런 ID 값
       schema:
-        type: integer                  
+        type: integer
